force-app/main/default/objects/bt_base__FeatureToggle__mdt/bt_base__FeatureToggle__mdt.object-meta.xml
<CustomObject>
    <description>Feature Toggle Definitions</description>
    <label>Blackthorn Feature Toggle</label>
    <pluralLabel>Blackthorn Feature Toggles</pluralLabel>
</CustomObject>