force-app/main/default/objects/bt_base__FeatureToggle__mdt/fields/bt_base__ActivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>bt_base__ActivationDateTime__c</fullName>
    <description>The date and time that the feature will activate upon.</description>
    <inlineHelpText>The date and time that the feature will activate upon.</inlineHelpText>
    <label>Activation Date Time</label>
    <type>DateTime</type>
</CustomField>