force-app/main/default/objects/bt_base__FeatureToggle__mdt/fields/bt_base__Active__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is checked the feature will be active.</description>
    <inlineHelpText>When this checkbox is checked the feature will be active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>