force-app/main/default/objects/bt_base__FeatureToggle__mdt/fields/bt_base__DeactivationDateTime__c.field-meta.xml
<CustomField>
    <fullName>bt_base__DeactivationDateTime__c</fullName>
    <description>The date and time that the feature will deactivate upon.</description>
    <inlineHelpText>The date and time that the feature will deactivate upon.</inlineHelpText>
    <label>Deactivation Date Time</label>
    <type>DateTime</type>
</CustomField>